[package]
name = "better-menu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gio = { version = "0.19.5", package = "gio", features = ["v2_76"] }
glib = { version = "0.19.5", package = "glib", features = ["v2_76"] }
xdg = "2.5.2"
evalexpr = "11.3.0"
