[package]
name = "better-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gio = { version = "0.19.5", package = "gio", features = ["v2_76"] }
glib = { version = "0.19.5", package = "glib", features = ["v2_76"] }
xdg = "2.5.2"
evalexpr = "11.3.0"
gtk4-layer-shell = "0.3.0"
once_cell = "1.5"
chrono = "0.4"
lazy_static = "1.4"
