[package]
name = "better-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4"] }
gio = { version = "0.20.12", features = ["v2_76"] }
glib = { version = "0.20.12", features = ["v2_76"] }
xdg = "3.0.0"
evalexpr = "12.0.2"
gtk4-layer-shell = "0.5.0"
once_cell = "1.5"
chrono = "0.4"
lazy_static = "1.4"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
